--- a/views/results.ejs
+++ b/views/results.ejs
@@ -5,9 +5,13 @@
     </head>
     <body>
         <div class="container">
-            <h1>Pizza Calculator</h1>
+            <div class="row">
+                <h1>Pizza Calculator</h1>
+            </div>
+            <div class="row">
+                <h2>Order <%= pizzas %> Pizzas! </h2>
+            </div>
 
-            <h2>Order <%= pizzas %> Pizzas! </h2>
             
         </div>
 
