--- a/views/results.ejs
+++ b/views/results.ejs
@@ -10,6 +10,9 @@
             </div>
             <div class="row">
                 <h2>Order <%= pizzas %> Pizzas! </h2>
+                <% for (var i=0; i < pizzas; i++){ %>
+                    <img src="https://cdn.modpizza.com/wp-content/uploads/2016/11/mod-pizza-maddy-default-e1479167621575.png">
+                <% } %>
             </div>
 
             
